[gd_scene load_steps=5 format=2]

[ext_resource path="res://FallingObject.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sfx/error.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="Animation" id=2]
resource_name = "wrong"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Art:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.3, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.866667, 0.129412, 0.129412, 1 ), Color( 1, 1, 1, 1 ), Color( 0.866667, 0.129412, 0.129412, 1 ), Color( 1, 1, 1, 1 ), Color( 0.866667, 0.129412, 0.129412, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FallingObject" type="RigidBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Art" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/wrong = SubResource( 2 )

[node name="AudioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="input_event" from="." to="." method="_on_FallingObject_input_event"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
